# botcoin-miner

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  skill.md
logs/: 20260311_034455_0xe6ccab8e65_fail.json  20260311_035551_0x8c3f045147_fail.json  20260311_035657_0x8ea58c4b92_fail.json  20260311_035909_0xb7c83d5c45_fail.json  20260311_040132_0xdb65df3a24_fail.json  20260311_040538_0x4440c6c2d4_fail.json  20260311_040725_0x64fa257669_fail.json  20260311_044009_0xc6a2af5dc4_fail.json
src/: config.py  credits.py  errors.py  logger.py  main.py  retry.py  setup.py  shutdown.py  types.py
src/auth/: token_manager.py
src/claiming/: auto_claim.py  bonus.py  claim.py  claim_log.py  reward_decoder.py
src/clients/: bankr.py  coordinator.py  llm.py
src/mining/: loop.py  receipt.py
src/solver/: extractor.py  models.py  prompts.py  proposal_voter.py  solver.py  validator.py
src/staking/: stake_info.py  staking.py
src/ui/: display.py
tests/: test_proposal_voter.py  test_solver_proposal_integration.py  test_stake_info.py
